src/ariel-os-macros/tests/ui/spawner/no_autostart_param.stderr
error: custom attribute panicked
 --> tests/ui/spawner/no_autostart_param.rs:8:1
  |
8 | #[ariel_os::spawner]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: the `autostart` parameter must be provided
